# Bombize

./: README.md
BombizeServer/: .gitignore  CMakeLists.txt  server.cpp
BombizeServer/Bmbz/Config/: DBConfig.hpp  ServerConfig.hpp  TcpConfig.hpp  UdpConfig.hpp
BombizeServer/Bmbz/Database/: GameDB.cpp  GameDB.hpp
BombizeServer/Bmbz/Game/Components/: LazyTimer.hpp  MapDestroyer.hpp
BombizeServer/Bmbz/Game/GameContext/: CollisionCalculator.hpp  GameContext.hpp  GameObject.hpp  GameRandom.hpp  ObjectManager.hpp
BombizeServer/Bmbz/Game/GameObjects/: Avatar.cpp  Avatar.hpp  Bomb.hpp  BombFire.hpp  BoxCollider.hpp  GameObjectsTags.hpp  GameResource.hpp  Map.cpp  Map.hpp
BombizeServer/Bmbz/Game/GameRoom/: Participant.cpp  Participant.hpp  RewardCalculator.hpp  Room.cpp  Room.hpp  RoomGroup.hpp  RoomsManager.hpp
BombizeServer/Bmbz/Game/NetworkData/: FireData.hpp  PlayerInfo.hpp  PlayerInfoOld.hpp  PlayerPosition.hpp  PlayerSpeed.hpp  RewardGame.hpp
BombizeServer/Bmbz/Game/Structs/: Direction.hpp  ExplosionTarget.hpp  GameResourceType.hpp  GroupToGame.hpp
BombizeServer/Bmbz/Generators/: GenStrings.hpp  GenUniqueValue.hpp  GenWithProbability.hpp  GenWithRange.hpp  Random.hpp
BombizeServer/Bmbz/Network/: TcpListener.cpp  TcpListener.hpp  UdpMaster.cpp  UdpMaster.hpp  UdpPacketDeliverer.cpp  UdpPacketDeliverer.hpp  WebSocketConnection.cpp  WebSocketConnection.hpp
BombizeServer/Bmbz/NetworkTypes/: FloatFixed.hpp  INetworkData.hpp  LimValue.hpp  NetworkString.hpp  Vector2.hpp  Vector2Fixed.hpp  Vector2Int.hpp  WrapNetworkArray256.hpp
BombizeServer/Bmbz/Prefabs/: CellMask.hpp  Map.cpp  Map.hpp  MapStorage.hpp
BombizeServer/Bmbz/Resources/: ResourceLocator.hpp
BombizeServer/Bmbz/Resources/Characters/: CharacterInfo.hpp  Characters.hpp
BombizeServer/Bmbz/Server/: MsgType.hpp  Server.cpp  Server.hpp  UserConnection.cpp  UserConnection.hpp
BombizeServer/Bmbz/ServerServices/: MatchOrganizer.hpp  ServerServices.hpp  Shop.hpp
BombizeServer/Bmbz/Types/: DynamicBufferPool.hpp  DynamicBufferPoolUdp.hpp  SharedBuffer.hpp  SharedBufferWithHeader.hpp
BombizeServer/Bmbz/User/: Character.hpp  LoginData.hpp  UserInfo.hpp
BombizeServer/Bmbz/Utils/: DataConversion.hpp  FixedQueue.hpp  ReadWriteData.hpp
BombizeServer/Testing/: CMakeLists.txt  TestMapDestroyer.cpp
BombizeServer/jsonConfigs/: ServerConfig.json
(+186 files in other folders)
